@startuml classe

' Classes
class Personnage{
}
class Biographie{
}
class Episode{
}
class Paragraphe{
}
class Joueur{
}
class Univers
class Partie
class MJ extends Joueur
class Aventure 

' Liens
Partie "1" *-- "1" Aventure

Paragraphe "1..*" *-right- "1" Episode
Episode "1..*" *-- "1" Biographie
Biographie "1" *-- "1" Personnage
Episode "1..*" *-- "0..1" Aventure

Partie "1..*" o-- "1..*" Joueur
Partie "1..*" o-- "1" Univers
Partie "1..*" o-- "1" MJ
Partie "1..*" o-- "1..*" Personnage

Personnage "1..*" *-up- "1" Univers
Personnage "1..*" *-- "1" Joueur 
Personnage "1..*" *-- "1" MJ 





@enduml